[gd_scene load_steps=3 format=3 uid="uid://bjrih3hcxx6k4"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_edv70"]
[ext_resource type="Theme" uid="uid://37kfrtwrye6n" path="res://Themes/new_theme.tres" id="2_j5p23"]

[node name="Control2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -33.0
offset_right = 184.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_edv70")

[node name="MaxScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_j5p23")
text = "Max Score: 0"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_j5p23")
text = "Start"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_j5p23")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="VBoxContainer" method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="VBoxContainer" method="_on_quit_button_pressed"]
